@@ -119,7 +119,7 @@ height=768
 
 	[menu]
 	is_context_menu=true
-	items=undo,redo,describeunit,renameunit,createunit,changeside,labelterrain,speak,continue,recruit,recall,delayshroud,updateshroud,cycle,endturn
+	items=undo,redo,describeunit,renameunit,createunit,changeside,labelterrain,clearlabels,speak,continue,recruit,recall,delayshroud,updateshroud,cycle,endturn
 	[/menu]
 
 	[menu]
